fix trade highlighting when hovering out fix subcurrency balance error on initial load align range selector and quick graph align padding of balances add .jshintrc for local development hackish fix to gas estimates document withdrawal support

--- a/frontend/app/css/styles.css
+++ b/frontend/app/css/styles.css
@@ -35,6 +35,11 @@
   white-space: nowrap !important;
 }
 
+.btn-balance {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
 table .btn-group a:not(.btn) {
   text-decoration: none;
 }
